@@ -1,5 +1,10 @@
 2005-04-01  Yann Hodique  <Yann.Hodique@lifl.fr>
 
+	* perso/patches.el: suppress annoying advice
+
+	* perso/mycode.el:
+	(c-guess-basic-syntax): reenable this line (really don't understand... :/)
+
 	* dotemacs.el: do not debug-on-error by default
 	(diff-buffer-with-associated-file): new util function
 	(global-set-key): change meaning of C-x k to diff when unsaved
